<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">

    <TextView
        android:id="@+id/textViewFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_filters"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="15dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/purple_500"
        app:itemIconTint="@color/bottom_navigation_menu_colors"
        app:itemTextColor="@color/bottom_navigation_menu_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:text="@string/milk"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxEggs"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/eggs"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxFish"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="75dp"
        android:text="@string/fish"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxShellfish"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/shellfish"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMilk" />

    <CheckBox
        android:id="@+id/checkBoxTreeNuts"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tree_nuts"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEggs" />

    <CheckBox
        android:id="@+id/checkBoxPeanuts"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/peanuts"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFish" />

    <CheckBox
        android:id="@+id/checkBoxWheat"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/wheat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxShellfish" />

    <CheckBox
        android:id="@+id/checkBoxSoy"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/soy"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTreeNuts" />

    <CheckBox
        android:id="@+id/checkBoxTomato"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/tomato"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPeanuts" />

    <CheckBox
        android:id="@+id/checkBoxMeat"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/meat"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWheat" />

    <CheckBox
        android:id="@+id/checkBoxPoultry"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/poultry"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSoy" />

    <CheckBox
        android:id="@+id/checkBoxMushroom"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/mushroom"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTomato" />

    <CheckBox
        android:id="@+id/checkBoxOnion"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/onion"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMeat" />

    <CheckBox
        android:id="@+id/checkBoxTofu"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tofu"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPoultry" />

    <CheckBox
        android:id="@+id/checkBoxCilantro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:minWidth="120dp"
        android:text="@string/cilantro"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMushroom" />


</androidx.constraintlayout.widget.ConstraintLayout>