...
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_centerInParent="true"
        android:onClick="recipeSearch"
        android:text="@string/give_me_a_recipe"
        android:textSize="20sp"
...
