<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/blankUserOrPassTextView"
        android:layout_width="wrap_content"
        android:minWidth="225dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:text="@string/please_enter_a_username_and_password"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <TextView
        android:id="@+id/incorrectUserOrPassTextView"
        android:layout_width="wrap_content"
        android:minWidth="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:clickable="false"
        android:text="@string/username_or_password_is_incorrect"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:minWidth="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incorrectUserOrPassTextView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:minWidth="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:minWidth="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/newUserTextView"
        android:layout_width="wrap_content"
        android:minWidth="225dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="newUser"
        android:text="@string/new_user_sign_up_here"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>